ACC-2346 Replace checker plugin with manual configuration